# vax-disassembler

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs
benches/: benchmarks.rs
src/: error.rs  lib.rs  opcode.rs  operand.rs  process_opcodes.in
src/doc/: absolute.txt  autodecrement.txt  autoincrement.txt  autoincrement_deferred.txt  byte_displacement.txt  byte_displacement_deferred.txt  immediate.txt  indexed.txt  literal.txt  longword_displacement.txt  longword_displacement_deferred.txt  register.txt  register_deferred.txt  word_displacement.txt  word_displacement_deferred.txt
tests/: process_opcodes_tests.rs
